--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
 - bases/operator.cluster.x-k8s.io_infrastructureproviders.yaml
 - bases/operator.cluster.x-k8s.io_addonproviders.yaml
+- bases/operator.cluster.x-k8s.io_ipamproviders.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -17,6 +18,7 @@ patchesStrategicMerge:
 - patches/webhook_in_controlplaneproviders.yaml
 - patches/webhook_in_infrastructureproviders.yaml
 - patches/webhook_in_addonproviders.yaml
+- patches/webhook_in_ipamproviders.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -26,6 +28,7 @@ patchesStrategicMerge:
 - patches/cainjection_in_controlplaneproviders.yaml
 - patches/cainjection_in_infrastructureproviders.yaml
 - patches/cainjection_in_addonproviders.yaml
+- patches/cainjection_in_ipamproviders.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
