--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -15868,6 +15868,28 @@ webhooks:
     resources:
     - infrastructureproviders
   sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: capi-operator-webhook-service
+      namespace: 'default'
+      path: /mutate-operator-cluster-x-k8s-io-v1alpha2-ipamprovider
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: vipamprovider.kb.io
+  rules:
+  - apiGroups:
+    - operator.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - ipamproviders
+  sideEffects: None
 ---
 # Source: cluster-api-operator/templates/operator-components.yaml
 apiVersion: admissionregistration.k8s.io/v1
@@ -15988,4 +16010,26 @@ webhooks:
     - UPDATE
     resources:
     - infrastructureproviders
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: capi-operator-webhook-service
+      namespace: 'default'
+      path: /validate-operator-cluster-x-k8s-io-v1alpha2-ipamprovider
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: vipamprovider.kb.io
+  rules:
+  - apiGroups:
+    - operator.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - ipamproviders
   sideEffects: None
