Add short names for custom resources

--- a/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
@@ -11,6 +11,8 @@ spec:
     kind: AddonProvider
     listKind: AddonProviderList
     plural: addonproviders
+    shortNames:
+    - caap
     singular: addonprovider
   scope: Namespaced
   versions:
