--- a/config/crd/bases/operator.cluster.x-k8s.io_bootstrapproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_bootstrapproviders.yaml
@@ -11,6 +11,8 @@ spec:
     kind: BootstrapProvider
     listKind: BootstrapProviderList
     plural: bootstrapproviders
+    shortNames:
+    - cabp
     singular: bootstrapprovider
   scope: Namespaced
   versions:
