--- a/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
@@ -11,6 +11,8 @@ spec:
     kind: ControlPlaneProvider
     listKind: ControlPlaneProviderList
     plural: controlplaneproviders
+    shortNames:
+    - cacpp
     singular: controlplaneprovider
   scope: Namespaced
   versions:
