--- a/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
@@ -11,6 +11,8 @@ spec:
     kind: CoreProvider
     listKind: CoreProviderList
     plural: coreproviders
+    shortNames:
+    - cacp
     singular: coreprovider
   scope: Namespaced
   versions:
