--- a/config/crd/bases/operator.cluster.x-k8s.io_ipamproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_ipamproviders.yaml
@@ -11,6 +11,8 @@ spec:
     kind: IPAMProvider
     listKind: IPAMProviderList
     plural: ipamproviders
+    shortNames:
+    - caipamp
     singular: ipamprovider
   scope: Namespaced
   versions:
