--- a/config/crd/bases/operator.cluster.x-k8s.io_infrastructureproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_infrastructureproviders.yaml
@@ -11,6 +11,8 @@ spec:
     kind: InfrastructureProvider
     listKind: InfrastructureProviderList
     plural: infrastructureproviders
+    shortNames:
+    - caip
     singular: infrastructureprovider
   scope: Namespaced
   versions:
