update git state syntax to goreleaser 1.24
Signed-off-by: Anurag <81210977+kranurag7@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,7 +14,7 @@ builds:
   - -X 'sigs.k8s.io/cluster-api-operator/version.gitMinor={{.Minor}}'
   - -X 'sigs.k8s.io/cluster-api-operator/version.gitVersion={{.Version}}'
   - -X 'sigs.k8s.io/cluster-api-operator/version.gitCommit={{.Commit}}'
-  - -X 'sigs.k8s.io/cluster-api-operator/version.gitTreeState={{ if .IsGitDirty }}dirty{{ else }}clean{{ end }}'
+  - -X 'sigs.k8s.io/cluster-api-operator/version.gitTreeState={{.GitTreeState}}'
   - -X 'sigs.k8s.io/cluster-api-operator/version.buildDate={{.Date}}'
   goos:
   - linux
