--- a/hack/charts/cluster-api-operator/templates/deployment.yaml
+++ b/hack/charts/cluster-api-operator/templates/deployment.yaml
@@ -99,6 +99,10 @@ spec:
         resources:
         {{- toYaml . | nindent 12 }}
         {{- end }}
+        {{- with .Values.env.manager }}
+        env:
+        {{- toYaml . | nindent 12 }}
+        {{- end }}
         {{- with .Values.containerSecurityContext.manager }}
         securityContext:
         {{- toYaml . | nindent 12 }}
