--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -27,6 +27,8 @@ image:
     repository: gcr.io/k8s-staging-capi-operator/cluster-api-operator
     tag: dev
     pullPolicy: IfNotPresent
+env:
+  manager: []
 healthAddr: ":8081"
 metricsBindAddr: "127.0.0.1:8080"
 diagnosticsAddress: "8443"
