--- a/docs/book/book.toml
+++ b/docs/book/book.toml
@@ -5,6 +5,19 @@ src = "src"
 title = "Cluster API Operator"
 description = "Cluster API Operator"
 
+[preprocessor.toc]
+command = "mdbook-toc"
+marker = "[[_TOC_]]"
+
+[preprocessor.fs-summary]
+# (default: true)
+clean-paths = false
+
+# other preprocessors will naturally need to
+# run after the summary has been generated
+[preprocessor.links]
+after = ["fs-summary"]
+
 [output.html]
 mathjax-support = true
 git-repository-url = "https://github.com/kubernetes-sigs/cluster-api-operator"
