Update missing image tag
Image tag dev does not seem to exist, change to main instead

--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -26,7 +26,7 @@ leaderElection:
 image:
   manager:
     repository: gcr.io/k8s-staging-capi-operator/cluster-api-operator
-    tag: dev
+    tag: main
     pullPolicy: IfNotPresent
 env:
   manager: []
